--- a/styles/light.css
+++ b/styles/light.css
@@ -5,12 +5,36 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --page-bg-image: url(../images/cover-image-light.png);
+  --accent-color: #353430;
+  --bg-title-color: #FF8DCB;
+  --main-title-color: #FFC2E6;
+  --text-shadow: #FF8DCB;
+  --subtitle-text-color: #353430;
+  --section-title-color: #353430; 
+  --paragraf-text-color: #353430; 
+  --button-outline-color: #353430;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+
+.theme-light .record {
+  visibility: hidden;
+}
+
+.theme-light .header__theme-menu-button.header__theme-menu-button_type_dark {
+  outline: none;  
+}
+
+.theme-light .header__theme-menu-button.header__theme-menu-button_type_light.header__theme-menu-button_active {
+  outline: 1px solid var(--button-outline-color);
+  outline-offset: 3px;  
+}
+
+.theme-light .header__theme-menu-button:hover {
+  outline: 1px solid rgba(50 49 45/0.4);
+  outline-offset: 3px;
+}
+
+.theme-light .header__theme-menu-button:focus-visible {
+  outline: none;  
 }
