--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,531 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
-.page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+.page {    
+  font-family: 'IBM Plex Mono', sans-serif;
+  background-image: var(--page-bg-image);
+  background-repeat: no-repeat;    
+  background-attachment: fixed; 
+  background-size: cover;
+  background-position: center;
+}
+
+.header {      
+  display: grid;
+  position: relative;
+  grid-template-columns: 1fr;    
+  justify-content: center; 
+  min-block-size: 668px;   
+}
+
+.header__section {
+  display: grid;
+  grid-template-rows: repeat(2, min-content);
+  margin-block-end: 12.7vh;  
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  inset: 1.4% 0 0 90.6%;
+  height: 25px;
+  width: 25px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);  
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  inset: 89.2% 0 0 1.2vh;
+  height: 25px;
+  width: 25px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);  
+}
+
+.record {
+  max-block-size: 5px;
+  max-inline-size: 5px
+}
+
+.record::before {
+  content: "rec";
+  position: absolute;
+  inset: 1.4% 0 0 81%; 
+  text-transform: uppercase;  
+  color: var(--accent-color);  
+  font-weight: var(--font-weight-normal);
+  font-size: var(--main-font-size);
+  line-height: 25px; 
+  max-block-size: 25px;
+}
+
+.record::after {
+  content: "";
+  position: absolute;  
+  inset: 2.5% 0 0 92.5%;    
+  width: 8px;  
+  height: 8px;  
+  border-radius: 50%;   
+  border: 2px solid var(--accent-color);
+  background-color: var(--accent-color);
+  box-shadow: 0 0 3px 3px var(--accent-color);   
+}
+
+.header__theme-menu {
+  margin-block-start: 9vh;    
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  border: none;    
+  line-height: 18px;
+  font-size: var(--main-font-size); 
+  color: var(--accent-color);
+  text-transform: lowercase;
+  margin-inline-end: 4.6vw;
+      
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--button-outline-color);
+  outline-offset: 3px;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid rgba(255, 0, 112, 0.3);
+  outline-offset: 3px; 
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  text-decoration: underline;
+  text-underline-offset: 3px;    
+}
+
+.header__theme-menu-list {
+  display: flex;  
+  flex-direction: column;
+  align-items: end;
+  gap: 1.95vh;
+  margin-block-end: 8.4vh;    
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+}
+
+.header__title {    
+  font-weight: var(--font-weight-bold);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 83%;  
+  color: var(--main-title-color);
+  text-shadow: 4px 4px 0 var(--text-shadow);  
+  margin-block-end: 6.4vh;   
+  margin-inline-end: 10px;
+  margin-inline-start: 10px;
+}
+
+.header__subtitle {       
+  background-color: var(--bg-title-color); 
+  color: var(--subtitle-text-color); 
+  font-weight: var(--font-weight-bold);
+  font-size: var(--main-font-size);
+  line-height: 23.4px;
+  margin-inline-start: 10px;
+  margin-inline-end: 10px;
+}
+
+.header__decoration-element-bottom {
+  position: absolute;
+  inset: 97.5% 0 0 3%;      
+  height: 25px;
+  width: 25px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+.link__style {
+  text-decoration: none;
+  text-shadow: 1px 1px 0 var(--text-shadow);
+}
+
+.link__style:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.link__style:focus {
+  text-decoration: none;
+  outline: 1px solid rgb(255, 0, 112);
+}
+
+
+.main__article {  
+  display: grid;  
+  justify-content: center;  
+  margin-block-end: 31px;         
+}
+
+.section_title {
+  color: var(--section-title-color);  
+  font-weight: var(--font-weight-bold);
+  font-size: var(--main-font-size);
+  margin-block-end: 20px;
+  margin-inline-start: var(--main-margin); 
+  margin-inline-end: var(--main-margin);  
+}
+
+.section_subtitle {
+  font-weight: var(--font-weight-bold);
+  font-size: var(--main-font-size);
+  color: var(--subtitle-text-color);  
+  background-color: var(--bg-title-color);
+  margin-block-end: 1.24vh; 
+  margin-inline-start: var(--main-margin);
+  margin-inline-end: var(--main-margin);   
+} 
+
+.main__paragraph {  
+  font-weight: var(--font-weight-normal);
+  font-size: var(--main-font-size); 
+  line-height: 23.4px; 
+  color: var(--paragraf-text-color);
+  margin-block-end: 20px;
+  margin-inline-start: var(--main-margin);
+  margin-inline-end: var(--main-margin); 
+}
+
+.section_subtitle-additional-indentation {  
+  margin-block-end: 2.5vh;
+}
+
+.main__gallery {   
+  display: grid;
+  justify-content: center;     
+  gap: 10px;  
+}
+
+.section_subtitle.gallery {
+  margin: 0;
+}
+
+.gallery_image {
+  width: calc(100vw - var(--main-margin) * 2);
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr;      
+  position: relative;  
+  min-block-size: 668px;  
+  justify-content: center;  
+}
+
+.footer__title {
+  align-self: center;
+  justify-self: center;  
+  font-weight: var(--font-weight-bold);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);    
+  color: var(--main-title-color);
+  text-shadow: 3px 3px 0 var(--text-shadow);
+  margin-inline-start: var(--main-margin);
+  margin-inline-end: var(--main-margin);
+  padding-block-start: 10vh;
+}
+
+.footer::before {
+  position: absolute;
+  inset: 7.7% 0 0 91%;         
+  height: 25px;
+  width: 25px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);  
+}
+
+.footer::after {
+  position: absolute;
+  inset: 100.7% 0 0 3%;      
+  height: 25px;
+  width: 25px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);  
+}
+
+@media (width>=768px) { 
+
+  .header {      
+    min-block-size: 1024px;   
+  }
+
+  .header.decorated-zone::before {
+    inset: 1.8% 0 0 94.1%;
+  }
+
+  .header.decorated-zone::after {
+    inset: 90.3% 0 0 2.5%;
+  }  
+  
+  .record::before {
+    inset: 1.9% 0 0 89.5%;
+  }
+
+  .record::after {
+    inset: 2.8% 0 0 95.2%;
+  }
+
+  .header__theme-menu-button {
+    margin-inline-end: 3.6vw;
+  }
+
+  .header__theme-menu-list {
+    margin-block-end: 21.7vh;            
+  }
+
+  .header__title {
+    margin-inline-start: 0;
+    margin-block-end: 19.2vh;
+    grid-column: span 2;
+  }
+  
+  .header__theme-menu {
+    margin-block-start: 23vh
+
+  }
+
+  .header__section {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, min-content);
+    margin-block-end: 29.1vh;      
+  }
+  
+  .header__subtitle {
+    grid-row: 2;
+    grid-column: 2;
+    margin-inline-start: 0;
+    margin-inline-end: 20px;    
+  }
+  
+
+  .main__article {
+    grid-template-columns: 1fr 2fr;    
+    margin-block-end: 7.3vh;
+  }
+
+  .section_title {
+    grid-row: 1/12;
+    --main-margin: 20px;
+    margin-inline-end: 0;    
+  }
+
+  .section_subtitle {
+    --main-margin: 20px;
+  }
+
+  .main__paragraph {  
+    --main-margin: 20px;
+  }
+  
+  .section_subtitle-additional-indentation {
+    margin-block-end: 2.4vh;
+  }
+ 
+  .section_subtitle.main__section-title-second {
+    grid-column: 1/3;
+  }
+
+  .main__paragraph.main__section-title-second {
+    grid-column: 1/3;
+  } 
+
+  .main__gallery {
+    display: grid;
+    gap: 20px;
+    margin-inline: 20px 20px; 
+    grid-template-columns: repeat(3, 1fr);  
+    grid-template-rows: min-content, (3, 1fr);    
+  }   
+  
+  .gallery_image {
+    object-fit: cover;
+    --main-margin: 20px; 
+    width: 100%;
+    height: 100%;       
+  } 
+  
+  .gallery {
+    grid-column: 1/4;
+    grid-row: 1;
+  }
+
+  .sunset {
+    grid-row: 2;
+    grid-column: 1/3;
+    
+  }
+
+  .tape {
+    grid-column: 1;
+    grid-row: 3/5;
+  }
+
+  .ice-cream {
+    grid-column: 3/4;
+    grid-row: 2/4;
+  }
+
+  .street {
+    grid-column: 2/4;
+  }  
+
+  .footer {
+    min-block-size: 1024px;    
+  }
+
+  .footer__title {
+    padding-block-start: 15vh;    
+  }
+
+  .footer.decorated-zone::before {
+    inset: 7.8% 0 0 94%;
+  }
+
+  .footer.decorated-zone::after {
+    inset: 101.5% 0 0 2.6%;
+  }    
+      
+}
+
+@media (width>=1024px) {
+
+  .header {      
+    min-block-size: 768px;   
+  }
+
+  .header.decorated-zone::before {
+    inset: 2.4% 0 0 95.6%;
+  }
+
+  .record::before {
+    inset: 2.4% 0 0 92.1%;
+  }
+
+  .record::after {
+    inset: 3.5% 0 0 96.5%;
+  }
+
+  .header.decorated-zone::after {
+    inset: 87.3% 0 0 2%;
+  }
+
+  .header__theme-menu {
+    margin-block-start: 2.5vh;
+    margin-block-end: 11.9vh;
+  }
+
+  .header__theme-menu-button {
+    margin: 0;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    justify-content: center;
+    gap: 2.43vw;   
+    
+  }
+
+  .header__title {
+    font-size: clamp(9.8125rem, 3.1971rem + 10.3365vw, 12.5rem);
+    margin-block-end: 13.5vh;
+  }
+
+  .header__section {
+    margin-block-end: 23.4vh;
+  } 
+  
+  .section_subtitle {
+    margin-inline-start: 1.3vw;
+  }
+
+  .main__paragraph {
+    margin-inline-start: 1.3vw;
+  } 
+  
+  .main__article.main__section-second {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(7, min-content);
+    margin-inline-start: 20px; 
+    margin-inline-end: 20px;  
+    column-gap: 20px; 
+  }
+
+  .section_title.main__section-title-second {
+    grid-row: 1/2;
+    margin-inline-start: 0; 
+    margin-inline-end: 0;    
+  }
+
+  .section_subtitle.main__section-title-second.main__section-subtitle-first {
+    grid-row: 2/3;
+    grid-column: 1/2;   
+    margin-inline-start: 0; 
+    margin-inline-end: 0;       
+  }
+
+  .main__paragraph.main__section-title-second.main__section-paragraph-first {
+    grid-row: 3/4;
+    grid-column: 1/2;  
+    margin-inline-start: 0; 
+    margin-inline-end: 0;    
+  }
+
+  .section_subtitle.main__section-title-second.main__section-subtitle-second {
+    grid-row: 2/3;
+    grid-column: 2/3;    
+    margin-inline-start: 0; 
+    margin-inline-end: 0;
+  }
+
+  .main__paragraph.main__section-title-second.main__section-paragraph-second {
+    grid-row: 3/4;
+    grid-column: 2/3;   
+    margin-inline-start: 0; 
+    margin-inline-end: 0;      
+  }
+
+  .section_subtitle.main__section-title-second.main__section-subtitle-third {
+    grid-row: 2/3;
+    grid-column: 3/4; 
+    margin-inline-start: 0; 
+    margin-inline-end: 0;   
+  }
+
+  .main__paragraph.main__section-title-second.main__section-paragraph-third {
+    grid-row: 3/4;
+    grid-column: 3/4;  
+    margin-inline-start: 0; 
+    margin-inline-end: 0;  
+  }
+
+  .footer {
+    min-block-size: 768px;
+  }
+
+  .footer__title {
+    font-size: clamp(9.8125rem, 3.1971rem + 10.3365vw, 12.5rem);  
+    padding-block-start: 0;  
+  }  
+
+  .main {
+    margin-block-end: 7.2vh;
+  }
+
+  .footer.decorated-zone::before {
+    inset: 2.7% 0 0 95.57%;
+  }
+
+  .footer.decorated-zone::after {
+    inset: 94.3% 0 0 2%;
+  }
+  
 }
