--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,15 +1,15 @@
-:root {    
+:root {
   --main-margin: 10px;
-   --main-font-size: 18px;
+  --main-font-size: 18px;
   --font-weight-bold: 700;
   --font-weight-normal: 400;
-  --accent-color: #FF0070;
-  --bg-title-color: #FF0070;
-  --text-shadow: #FF0070; 
+  --accent-color: #ff0070;
+  --bg-title-color: #ff0070;
+  --text-shadow: #ff0070;
   --subtitle-text-color: #000028;
-  --section-title-color: #FF0070;     
-  --main-title-color: #DB00FF;
-  --paragraf-text-color: #F1B2CE;
-  --button-outline-color: #FF0070;
-  --page-bg-image: url(../images/cover-image-dark.png);  
-  }
+  --section-title-color: #ff0070;
+  --main-title-color: #db00ff;
+  --paragraf-text-color: #f1b2ce;
+  --button-outline-color: #ff0070;
+  --page-bg-image: url(../images/cover-image-dark.png);
+}
