--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@
   grid-template-columns: 1fr;
   justify-content: center;
   min-block-size: 668px;
+  block-size: 100vh;
 }
 
 .header__section {
