--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,6 +10,7 @@
   --section-title-color: #ff0070;
   --main-title-color: #db00ff;
   --paragraf-text-color: #f1b2ce;
-  --button-outline-color: #ff0070;
+  --button-outline-color-hover: rgba(255 0 112/0.4);
+  --decoration-color: #ff0070;
   --page-bg-image: url(../images/cover-image-dark.png);
 }
