--- a/styles/light.css
+++ b/styles/light.css
@@ -14,6 +14,8 @@
   --section-title-color: #353430;
   --paragraf-text-color: #353430;
   --button-outline-color: #353430;
+  --button-outline-color-hover: rgba(53 52 48/0.4);
+  --decoration-color: transparent;
 }
 
 @media (prefers-color-scheme: light) {
@@ -26,20 +28,8 @@
     --section-title-color: #353430;
     --paragraf-text-color: #353430;
     --button-outline-color: #353430;
-  }    
+    --button-outline-color-hover: rgba(53 52 48/0.4);
+    --decoration-color: transparent;
+  }      
 }
 
-
-.theme-light {
-  outline: 1px solid var(--button-outline-color);
-  outline-offset: 3px;
-}
-
-.theme-light .header__theme-menu-button:hover {
-  outline: 1px solid rgba(50 49 45/0.4);
-  outline-offset: 3px;
-}
-
-.theme-light .header__theme-menu-button:focus-visible {
-  outline: none;
-}
