--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,13 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   background-image: var(--page-bg-image);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
+  background-color: var(--bg-color);
 }
 
 .header {
@@ -17,58 +18,60 @@
   justify-content: center;
   min-block-size: 668px;
   margin-block-end: 40px;
+  block-size: 100vh;
 }
 
 .header__theme-menu {
-  margin-block-start: 76px;
-  margin-block-end: 70px;
+  margin-block-start: 75px;
+  margin-block-end: 66px;
 }
 
 .header__section {
   display: grid;
+  grid-template-columns: 1fr;
   grid-template-rows: repeat(2, min-content);
 }
 
-.decorated-zone::before {
+.decorated__corner::before {
   content: "";
   position: absolute;
-  inset: 10px 0 0 340px;
+  top: var(--decoration-margin);
+  right: var(--decoration-margin);
   height: 25px;
   width: 25px;
   border-top: 1px solid var(--accent-color);
   border-right: 1px solid var(--accent-color);
 }
 
-.decorated-zone::after {
+.decorated__corner::after {
   content: "";
   position: absolute;
-  inset: 633px 0 0 2.6vw;
+  bottom: var(--decoration-margin);
+  left: var(--decoration-margin);
   height: 25px;
   width: 25px;
   border-bottom: 1px solid var(--accent-color);
   border-left: 1px solid var(--accent-color);
 }
 
-.record {
-  max-block-size: 1px;
-}
-
-.record::before {
+.header.decorated-zone::before {
   content: "rec";
   position: absolute;
-  inset: 10px 0 0 305px;
+  top: var(--decoration-margin);
+  right: 40px;
   text-transform: uppercase;
   color: var(--decoration-color);
   font-weight: var(--font-weight-normal);
   font-size: var(--main-font-size);
   line-height: 25px;
-  max-block-size: 25px;
+  z-index: -1;
 }
 
-.record::after {
+.header.decorated-zone::after {
   content: "";
   position: absolute;
-  inset: 2.5% 0 0 92.5%;
+  top: 20px;
+  right: 20px;
   width: 8px;
   height: 8px;
   border-radius: 50%;
@@ -78,36 +81,36 @@
 }
 
 .header__theme-menu-button {
+  block-size: 25px;
+  inline-size: 70px;
   background-color: transparent;
   border: none;
   line-height: 18px;
   font-size: var(--main-font-size);
   color: var(--accent-color);
   text-transform: lowercase;
-  margin-inline-end: 4.6vw;
+  margin-inline-end: 10px;
 }
 
 .header__theme-menu-button:not(.header__theme-menu-button_active):hover {
+  outline: none;
   outline: 1px solid var(--button-outline-color-hover);
-  outline-offset: 3px;
 }
 
 .header__theme-menu-button:focus {
   outline: none;
-  text-decoration: underline;
-  text-underline-offset: 3px;
+  border-bottom: 1px solid var(--button-outline-color);
 }
 
 .header__theme-menu-button_active {
-  outline: 1px solid var(--button-outline-color);
-  outline-offset: 3px;
+  border: 1px solid var(--button-outline-color);
 }
 
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
   align-items: end;
-  gap: 16px;
+  gap: 11px;
 }
 
 .title-decor {
@@ -115,6 +118,7 @@
 }
 
 .header__title {
+  grid-column: 1/3;
   font-weight: var(--font-weight-bold);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 83%;
@@ -150,22 +154,21 @@
 }
 
 .link__style:hover {
-  text-decoration: underline;
-  text-underline-offset: 3px;
+  border-bottom: 1px solid currentColor;
 }
 
 .link__style:focus {
   text-decoration: none;
-  outline: 1px solid rgb(255, 0, 112);
+  outline: 1px solid currentColor;
 }
 
-.main__article {
+.main__section {
   display: grid;
   justify-content: center;
   margin-block-end: 29px;
 }
 
-.section_title {
+.main_section_title {
   color: var(--section-title-color);
   font-weight: var(--font-weight-bold);
   font-size: var(--main-font-size);
@@ -195,7 +198,7 @@
 }
 
 .section_subtitle-additional-indentation {
-  margin-block-end: 20px;
+  margin-block-end: 19.5px;
 }
 
 .main__gallery {
@@ -216,9 +219,11 @@
 .footer {
   display: grid;
   grid-template-columns: 1fr;
+  grid-template-rows: min-content 1fr;
   position: relative;
   min-block-size: 668px;
   justify-content: center;
+  block-size: 100vh;
 }
 
 .footer__title {
@@ -257,27 +262,29 @@
   }
 
   .header.decorated-zone::before {
-    inset: 20px 0 0 94.1vw;
+    --decoration-margin: 20px;
+    right: 49px;
   }
 
   .header.decorated-zone::after {
-    inset: 980px 0 0 20px;
+    top: 27px;
+    right: 29px;
   }
 
-  .record::before {
-    inset: 20px 0 0 89.5vw;
+  .decorated__corner::before {
+    --decoration-margin: 20px;
   }
 
-  .record::after {
-    inset: 30px 0 0 95vw;
+  .decorated__corner::after {
+    --decoration-margin: 20px;
   }
 
   .header__theme-menu-button {
-    margin-inline-end: 27px;
+    margin-inline-end: 20px;
   }
 
   .header__theme-menu-list {
-    margin-block-end: 180px;
+    margin-block-end: 175px;
   }
 
   .header__title {
@@ -303,7 +310,7 @@
     margin-inline-end: 20px;
   }
 
-  .main__article {
+  .main__section {
     grid-template-columns: 1fr 2fr;
     margin-block-end: 58px;
   }
@@ -312,7 +319,7 @@
     margin-block-end: 20.5px;
   }
 
-  .section_title {
+  .main_section_title {
     grid-row: 1/12;
     --main-margin: 20px;
     margin-inline-end: 0;
@@ -326,11 +333,16 @@
     --main-margin: 20px;
   }
 
-  .section_subtitle.main__section-title-second {
-    grid-column: 1/3;
+  .main__section.main__section-flexible {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
   }
 
-  .main__paragraph.main__section-title-second {
+  .main_section_title.main__section-title-flexible {
+    grid-column: 1;
+  }
+
+  .main__section-container {
     grid-column: 1/3;
   }
 
@@ -338,9 +350,9 @@
     display: grid;
     gap: 20px;
     margin-inline: 20px 20px;
+    margin-block-end: 60px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: min-content, (3, 1fr);
-    margin-block-end: 20px;
   }
 
   .gallery_image {
@@ -390,27 +402,31 @@
 @media (width>=1024px) {
   .header {
     min-block-size: 768px;
+    margin-block-end: 59px;
   }
 
   .header.decorated-zone::before {
-    inset: 20px 0 0 95.6vw;
-  }
-
-  .record::before {
-    inset: 20px 0 0 92vw;
-  }
-
-  .record::after {
-    inset: 30px 0 0 96.5vw;
+    --decoration-margin: 20px;
+    right: 49px;
   }
 
   .header.decorated-zone::after {
-    inset: 87.3% 0 0 2%;
+    top: 27px;
+    right: 29px;
+  }
+
+  .decorated__corner::before {
+    --decoration-margin: 20px;
+  }
+
+  .decorated__corner::after {
+    --decoration-margin: 20px;
+    bottom: 20px;
   }
 
   .header__theme-menu {
     margin-block-start: 20px;
-    margin-block-end: 100px;
+    margin-block-end: 99px;
   }
 
   .header__theme-menu-button {
@@ -420,7 +436,7 @@
   .header__theme-menu-list {
     flex-direction: row;
     justify-content: center;
-    gap: 25px;
+    gap: 10px;
   }
 
   .header__title {
@@ -436,76 +452,49 @@
     margin-inline-start: 14px;
   }
 
-  .main {
-    margin-block-end: 60px;
+  .main__section.main__section-flexible {
+    grid-template-columns: repeat(3, minmax(315px, 1fr));
+    column-gap: 20px;
+    margin-inline-start: 20px;
+    margin-inline-end: 20px;
   }
 
-  .main__article {
-    margin-block-end: 59px;
-  }
-
-  .section_subtitle.section_subtitle-additional-indentation {
-    margin-block-end: 19.5px;
+  .main__section-container {
+    grid-row-start: 2;
+    grid-column: span 1;
   }
 
   .main__paragraph {
     margin-inline-start: 14px;
   }
 
-  .main__article.main__section-second {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(7, min-content);
-    margin-inline-start: 20px;
-    margin-inline-end: 20px;
-    column-gap: 20px;
+  .main {
+    margin-block-end: 60px;
   }
 
-  .section_title.main__section-title-second {
-    grid-row: 1/2;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+  .main__section {
+    margin-block-end: 59px;
   }
 
-  .section_subtitle.main__section-title-second.main__section-subtitle-first {
-    grid-row: 2/3;
-    grid-column: 1/2;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+  .section_subtitle.section_subtitle-additional-indentation {
+    margin-block-end: 18.5px;
   }
 
-  .main__paragraph.main__section-title-second.main__section-paragraph-first {
-    grid-row: 3/4;
-    grid-column: 1/2;
+  .main_section_title.main__section-title-flexible {
+    grid-column: 1;
+    grid-row: 1;
     margin-inline-start: 0;
-    margin-inline-end: 0;
+    margin-block-end: 21px;
   }
 
-  .section_subtitle.main__section-title-second.main__section-subtitle-second {
-    grid-row: 2/3;
-    grid-column: 2/3;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+  .main__section-container .section_subtitle {
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
   }
 
-  .main__paragraph.main__section-title-second.main__section-paragraph-second {
-    grid-row: 3/4;
-    grid-column: 2/3;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-  }
-
-  .section_subtitle.main__section-title-second.main__section-subtitle-third {
-    grid-row: 2/3;
-    grid-column: 3/4;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-  }
-
-  .main__paragraph.main__section-title-second.main__section-paragraph-third {
-    grid-row: 3/4;
-    grid-column: 3/4;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+  .main__section-container .main__paragraph {
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
   }
 
   .footer {
@@ -515,13 +504,5 @@
   .footer__title {
     font-size: clamp(9.8125rem, 3.1971rem + 10.3365vw, 12.5rem);
     padding-block-start: 0;
-  }
-
-  .footer.decorated-zone::before {
-    inset: 2.7% 0 0 95.55%;
-  }
-
-  .footer.decorated-zone::after {
-    inset: 94.3% 0 0 2%;
   }
 }
