--- a/styles/style.css
+++ b/styles/style.css
@@ -279,6 +279,11 @@
     margin-block-start: 105px;
   }
 
+  .header__title {
+    grid-column: 1/3;
+    margin-inline-start: 0;
+  }
+
   .header__subtitle {
     grid-row: 2;
     grid-column: 2;
